# SemesterPilot

./: README.md
ou_task_manager/: .env.example  .gitignore  AGENTS.md  PLAN.md  README_HE.txt  app.py  prototype.py  pyproject.toml  run.bat  send_weekly.py  setup_weekly_task.bat
ou_task_manager/docs/: ui-foundation.md
ou_task_manager/docs/architecture/: 0001-foundation.md  0002-domain-and-sqlite.md  0003-calendar-import-pipeline.md  0004-synchronization-foundation.md  0005-calendar-synchronization.md  0006-design-system-and-ui-foundation.md  0007-first-run-calendar-import-workflow.md  0008-dashboard-read-model.md  0009-assignment-management.md  0010-subtask-ownership.md
ou_task_manager/src/semester_pilot/: __init__.py
ou_task_manager/src/semester_pilot/application/: __init__.py  repositories.py
ou_task_manager/src/semester_pilot/domain/: __init__.py  entities.py  enums.py
ou_task_manager/src/semester_pilot/infrastructure/: __init__.py  assignment_management.py  calendar_import.py  dashboard.py  database.py  ics_parser.py  migrations.py  repositories.py  subtask_management.py  synchronization.py
ou_task_manager/src/semester_pilot/ui/: __init__.py
ou_task_manager/static/: prototype.css  prototype.js  style.css
ou_task_manager/templates/: index.html
ou_task_manager/tests/: conftest.py  test_app.py
ou_task_manager/tests/fixtures/calendars/: changed_deadline.ics  duplicate.ics  malformed.ics  missing_event.ics  normal.ics  renamed_assignment.ics  (+1 more)
ou_task_manager/tests/integration/: test_assignment_management_repository.py  test_calendar_import.py  test_calendar_synchronization.py  test_dashboard_repository.py  test_first_run_workflow.py  test_migrations.py  test_repositories.py  test_subtask_http_workflow.py  test_subtask_repository.py
ou_task_manager/tests/unit/: test_assignment_management.py  test_assignment_ui.py  test_calendar_pipeline.py  test_dashboard.py  test_entities.py  test_first_run_view_model.py  test_subtask_management.py  test_ui_foundation.py
(+50 files in other folders)
